homelab-gitops/apps/docs/base/wikijs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: docs
spec:
  selector:
    app: wikijs
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
